Minor fixes for spacing between navigation menu and the elements that follow: homepage: nav and landing image; shop: nav and breadcrumb.

--- a/Tabs_N_Blanks/css/shop.css
+++ b/Tabs_N_Blanks/css/shop.css
@@ -22,7 +22,7 @@ ul.breadcrumb {
 	background: #F2EDE7;
 	list-style: none; 
 	overflow: hidden; 
-	margin-top: 2em;
+	margin-top: 0.7em;
   padding-left: 4em;
 }
 
